2005-07-27  David Gilbert  <david.gilbert@object-refinery.com>

	* java/text/AttributedString.java: reformatted.
	
2005-07-27  Roman Kennke  <roman@kennke.org>

	* javax/swing/JTextPane.java:
	Reformatted file to match our coding style.

2005-07-27  Roman Kennke  <roman@kennke.org>

	* javax/swing/JTextPane.java
	(getCharacterAttributes): Return SimpleAttributeSet.EMPTY instead
	of null.

2005-07-27  Roman Kennke  <roman@kennke.org>

	* javax/swing/plaf/basic/BasicPanelUI.java
	(installDefaults): Install background color on JPanel.
	* javax/swing/plaf/metal/MetalLookAndFeel.java
	(initComponentDefaults): Added background color for Panel.

2005-07-27  David Gilbert  <david.gilbert@object-refinery.com>

	* java/text/AttributedCharacterIterator.java: API doc fixes.
	
2005-07-27  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/text/html/parser/DocumentParser.java: reverted API fix.

2005-07-27  Roman Kennke  <roman@kennke.org>

	* javax/swing/DefaultBoundedRangeModel.java:
	Fixed / added API comments for class description.
	* javax/swing/DefaultButtonModel.java: Likewise.
	* javax/swing/DefaultCellEditor.java: Likewise.
	* javax/swing/DefaultComboBoxModel.java: Likewise.
	* javax/swing/DefaultDesktopManager.java: Likewise.
	* javax/swing/DefaultButtonModel.java: Likewise.
	* javax/swing/DefaultFocusManager.java: Likewise.
	* javax/swing/DefaultListCellRenderer.java: Likewise.
	* javax/swing/DefaultListModel.java: Likewise.
	* javax/swing/DefaultListSelectionModel.java: Likewise.
	* javax/swing/DefaultSingleSelectionModel.java: Likewise.
	* javax/swing/FocusManager.java: Likewise.
	* javax/swing/GrayFilter.java: Likewise.
	* javax/swing/ImageIcon.java: Likewise.
	* javax/swing/InputMap.java: Likewise.
	* javax/swing/InputVerifier.java: Likewise.
	* javax/swing/InternalFrameFocusTraversalPolicy.java: Likewise.
	* javax/swing/JApplet.java: Likewise.
	* javax/swing/JCheckBox.java: Likewise.
	* javax/swing/JCheckBoxMenuItem.java: Likewise.